--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   font-family: "CustomFont";
   src: url("assets/fonts/Ubuntu/Ubuntu-Medium.eot");
   src: url("assets/fonts/Ubuntu/Ubuntu-Medium.woff") format("woff"),
-  url("assets/fonts/Ubuntu/Ubuntu-Medium.svg#filename") format("svg");
+    url("assets/fonts/Ubuntu/Ubuntu-Medium.svg#filename") format("svg");
 }
 
 #root {
@@ -13,10 +13,36 @@
   box-shadow: 0 15px 15px -5px #00000028;
 }
 
+.logo {
+  position: absolute;
+  top: calc(100vh - 80%);
+  width: 100%;
+  text-align: center;
+  font-size: 48px;
+}
+
+.error {
+  text-align: left;
+  position: absolute;
+  left: 344px;
+  bottom: 100%;
+  font-size: 14px;
+  font-style: italic;
+  font-family: system-ui;
+  opacity: 0;
+  transition: all 0.3s ease-out;
+}
+
+.error.show {
+  left: 14px;
+  opacity: 1;
+}
+
 .container {
   width: 100vw;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background: url("./assets/bg.png") no-repeat center center / cover;
@@ -54,11 +80,10 @@
   align-items: center;
   justify-content: center;
   border-radius: 50px;
-  overflow: hidden;
 }
 
 .input {
-  min-width: 350px;
+  min-width: 400px;
   padding: 8px 50px 8px 12px;
   font-size: 1.2em;
   background: #0000000f;
@@ -73,7 +98,7 @@
 .input:focus {
   padding-top: 9px;
   padding-bottom: 9px;
-  min-width: 360px;
+  min-width: 420px;
   font-size: 1.25em;
   border-color: #fff;
 }
